--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Enigma Quantum</title>
 <link rel="stylesheet" href="./css/reset.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
