--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<div class="button icon6"><img src="./images/ico6.png"></div>
 			</div>
 			
-			<div class="detail">
+			<div class="detail spcharadetail">
 				<div class="prof prof1">
 					<img class="profimg" src="./images/profimage1.png">
 					<div class="profcontents">
