--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<div id="global-nav" class="beforescroll">
 	<div class="header-wrapper">
 	<ul class="header-buttons">
-		<li><span class="fa fa-volume-high musicon"></span><span class="fa fa-volume-xmark hidden musicoff"></span></li>
+		<li><span class="fa fa-volume-high musicon hidden"></span><span class="fa fa-volume-xmark musicoff"></span></li>
 		<li><a href="#top">TOP</a></li>
 		<li><a href="#story">STORY</a></li>
 		<li><a href="#character">CHARACTER</a></li>
