--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-<audio src="./eq-theme.mp3" id="audio"></audio>
+<audio src="./eq-theme.mp3" id="audio" loop></audio>
 <div id="first">
 	<div class="loader-wrapper">
 		<div class="loader"></div>
